K8s/istio-managing-apps-kubernetes/06/demos/demo2/ingress-pre/numbers-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rng
  namespace: rng
spec:
  hosts:
    - rng.sixeyed.com
  gateways:
    - ingressgateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: numbers-web.rng.svc.cluster.local
        subset: v1
